--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -1,4 +1,4 @@
-name: CI
+name: CI/CD
 
 on:
   push:
@@ -8,7 +8,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  docker:
+  build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -29,3 +29,15 @@ jobs:
           platforms: linux/arm64
           push: true
           tags: yqx1110/main:chatgpt-bot
+          
+  deploy:
+    runs-on: 'ubuntu-latest'
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Deploy
+        uses: WyriHaximus/github-action-helm3@v3
+        with:
+          exec: helm upgrade chatgpt-bot helm/ --install --wait --atomic
+          kubeconfig: ${{ secrets.KUBECONFIG }}
+          overrule_existing_kubeconfig: "true"
