--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -31,6 +31,7 @@ jobs:
           tags: yqx1110/main:chatgpt-bot
           
   deploy:
+    needs: build
     runs-on: 'ubuntu-latest'
     steps:
       - name: Checkout
